@@ -1,3 +1,8 @@
+2008-11-12  Mike Krüger  <mkrueger@novell.com>
+
+	* Gui/NRefactoryResolver.cs:
+	* Gui/CodeTemplateCompletionData.cs: Added double tab templates.
+
 2008-11-12  Lluis Sanchez Gual  <lluis@novell.com>
 
 	* Makefile.am:
